objects/pse__Work_Queue__c.object
<CustomObject>
    <customHelpPage>pse__WorkQueueHelp</customHelpPage>
    <description>This object has been deprecated and will be removed in a future release. Use Setup/Schedule Jobs to manage scheduled jobs and Setup/Apex Jobs to manage batch jobs.</description>
    <fields>
        <fullName>pse__ApexClass__c</fullName>
        <description>Name of the apex class that is to be managed (Scheduled or Batch)</description>
        <label>ApexClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Constructor_Data__c</fullName>
        <description>Used by the application to store information needed to construct more complex batchable classes that require input.</description>
        <label>Constructor Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Cron_Day_Parameter__c</fullName>
        <description>Stores specific information about which days on which to run the job.</description>
        <inlineHelpText>Stores specific information about which days on which to run the job.</inlineHelpText>
        <label>Cron Day Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cron_Schedule__c</fullName>
        <description>Holds the Cron Scheduled Pattern for this task.  Blank if to be run only once.</description>
        <label>Cron Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Next_Run__c</fullName>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Zone_Offset__c</fullName>
        <description>Stores the offset from GMT for the user who is creating this schedule.
Format is sHHMM
Where s= + or - depending on if the time zone is ahead or behind gmt
  and HH is the number of hours to offset
  and MM is the number of minutes to offset (used for partial hour time zones)</description>
        <label>Time Zone Offset</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>DEPRECATED: Work Queue</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__ApexClass__c</columns>
        <columns>pse__Last_Run__c</columns>
        <columns>pse__Next_Run__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Status_Message__c</columns>
        <columns>pse__Constructor_Data__c</columns>
        <columns>pse__Cron_Schedule__c</columns>
        <columns>pse__Time_Zone_Offset__c</columns>
        <columns>pse__Batch_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WQ-{0}</displayFormat>
        <label>Work Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DEPRECATED: Work Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>